added register functionality

--- a/server/config.env
+++ b/server/config.env
@@ -1,4 +1,9 @@
+APP_NAME='Flask-React-Boilerplate'
 SECRET_KEY=''
 DATABASE_URL=data-dev.sqlite
 FLASK_CONFIG=development
 LOGGING_LEVEL=DEBUG
+ADMIN_EMAIL='noemail@domain.com'
+ADMIN_PASSWORD='nopassword'
+FAKE_EMAIL='user@fake.com'
+FAKE_PASSWORD='fakepassword'
