--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ greenlet==3.0.3
 gunicorn==19.9.0
 honcho==1.0.1
 idna==2.8
+importlib-metadata==7.0.1
 inflection==0.5.1
 iniconfig==2.0.0
+isort==5.13.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jsmin==3.0.1
@@ -37,6 +39,7 @@ marshmallow==3.20.2
 mypy-extensions==1.0.0
 packaging==19.1
 pipupgrade==1.5.1
+platformdirs==4.1.0
 pluggy==1.3.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
@@ -61,3 +64,5 @@ urllib3==1.25.8
 webassets==0.12.1
 Werkzeug==0.15.5
 WTForms==2.2.1
+yapf==0.40.2
+zipp==3.17.0
