--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alembic==1.1.0
 appdirs==1.4.3
-attrs==19.1.0
+attrs==23.2.0
 blinker==1.4
 cached-property==1.5.2
 certifi==2019.6.16
@@ -9,6 +9,7 @@ Click==7.0
 coverage==7.4.0
 exceptiongroup==1.2.0
 Faker==2.0.1
+flasgger==0.9.7.1
 Flask==1.1.1
 Flask-Assets==0.12
 Flask-Compress==1.4.0
@@ -32,10 +33,13 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jsmin==3.0.1
 jsonpickle==1.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 loguru==0.7.2
 Mako==1.1.0
 MarkupSafe==1.1.1
 marshmallow==3.20.2
+mistune==3.0.2
 mypy-extensions==1.0.0
 packaging==19.1
 pipupgrade==1.5.1
@@ -48,9 +52,12 @@ pytest==7.4.4
 python-dateutil==2.8.0
 python-dotenv==1.0.0
 python-editor==1.0.4
+PyYAML==6.0.1
 raygun4py==4.3.0
 redis==3.3.8
+referencing==0.32.1
 requests==2.22.0
+rpds-py==0.17.1
 rq==1.1.0
 six==1.12.0
 SQLAlchemy==1.3.8
