--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,9 @@ MarkupSafe==1.1.1
 marshmallow==3.20.2
 mistune==3.0.2
 mypy-extensions==1.0.0
+numpy==1.26.4
 packaging==19.1
+pandas==2.2.0
 pipupgrade==1.5.1
 platformdirs==4.1.0
 pluggy==1.3.0
@@ -50,9 +52,10 @@ psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pyparsing==2.4.2
 pytest==7.4.4
-python-dateutil==2.8.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-editor==1.0.4
+pytz==2024.1
 PyYAML==6.0.1
 raygun4py==4.3.0
 redis==3.3.8
@@ -68,6 +71,7 @@ text-unidecode==1.2
 tomli==2.0.1
 typing-inspect==0.9.0
 typing_extensions==4.9.0
+tzdata==2024.1
 urllib3==1.25.8
 webassets==0.12.1
 Werkzeug==0.15.5
