--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "daisyui": "^4.7.3"
   }
 }
