--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,26 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/output.css --minify",
+    "watch:css": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/output.css --watch"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "mini-css-extract-plugin": "^2.8.1",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
+    "daisyui": "^4.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
-    "daisyui": "^4.7.3",
-    "postcss-import": "^16.1.0"
+    "postcss": "^8",
+    "postcss-import": "^16.1.0",
+    "typescript": "^5"
   }
 }
