got the backend and frontend working

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ __pycache__/
 # Distribution / packaging
 .Python
 *.env
+.env
+.env.development
+.env.local
+.env.production
 env/
 build/
 develop-eggs/
