--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -67,6 +67,7 @@ six==1.12.0
 SQLAlchemy==1.3.8
 sqlalchemy-orm==1.2.10
 SQLAlchemy-Utils==0.41.1
+stripe==9.4.0
 text-unidecode==1.2
 tomli==2.0.1
 typing-inspect==0.9.0
